hn_tests/opt/failing/locals2.hn
hnMain = print (sum (sum 1 5) 5)